--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,22 @@ body {
 .app.warm {
   background-image: url('./assets/warm-bg.jpg');
 }
+.app.cloudy {
+  background-image: url('./assets/cloudy_2.jpg');
+}
+.app.rainy{
+  background-image: url('./assets/rainy.jpg');
+}
+.app.snow{
+  background-image: url('./assets/snow.jpg');
+}
+.app.clear{
+  background-image: url('./assets/clear_sky.png');
+}
+.app.sunny{
+  background-image: url('./assets/sunny_beach.jpg');
+
+}
 
 main {
   min-height: 100vh;
